@@ -386,6 +386,22 @@ documentation.
 If you find this module helpful, please help back spread the love. Thanks.
 
 
+QUICK PERFORMANCE TIPS
+--------------------------------------------------------------------------------
+- Use lazyLoad "ondemand" / "anticipated" for tons of images, not "progressive".
+  Unless within an ajaxified lightbox.
+- Choose lazyload "Blazy" for carousels below the fold to delay loading them.
+- Tick "Optimized" option on the top right of Slick optionset edit page.
+- Use image style with regular sizes containing effect "crop" in the name. This
+  way all images will inherit dimensions calculated once.
+- Disable core library "slick-theme.css" as it contains font "slick" which
+  may not be in use when using own icon font at:
+  /admin/config/media/slick/ui
+- Use Blazy multi-serving images, Responsive image, or Picture, accordingly.
+- Uninstall Slick UI at production.
+- Enable Drupal cache, and CSS/ JS assets aggregation.
+
+
 AUTHOR/MAINTAINER/CREDITS
 --------------------------------------------------------------------------------
 Slick 8.x-1.x by gausarts, and other authors below.
